deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-test
spec:
  selector:
    matchLabels:
      app: sample
  replicas: 1
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
      - name: sample
        image: saniok92/sample:1.1
        ports:
        - containerPort: 80
