ingres-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress
    annotations:
      kubernetes.io/ingress.class: "nginx"
      cert-manager.io/issuer: "letsencrypt-staging"
spec:
    tls:
    - hosts:
      - koval92.xyz
      secretName: test-tls
    rules:
    - host: koval92.xyz
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service
              port:
                number: 80
