ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - koval92.xyz
    secretName: test-tls
  rules:
  - host: koval92.xyz
    http:
      paths:
      - backend:
          serviceName: service
          servicePort: 80
